WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278933
REGRESSION (
282319@main
): [ EWS macOS wk1 ] 3 tests in imported/w3c/web-platform-tests/mathml/presentation-markup are consistent failures
https://bugs.webkit.org/show_bug.cgi?id=278933
Summary
REGRESSION (282319@main): [ EWS macOS wk1 ] 3 tests in imported/w3c/web-platf...
Marta Darbinyan
Reported
2024-08-30 10:51:44 PDT
The following tests are consistent failure on MacOS wk1 EWS and on main. The flakiness started within the range of
282319@main
change. imported/w3c/web-platform-tests/mathml/presentation-markup/operators/mo-minsize-maxsize-legacy-length-values.html imported/w3c/web-platform-tests/mathml/presentation-markup/operators/mo-minsize-maxsize-001.html imported/w3c/web-platform-tests/mathml/presentation-markup/mrow/stretch-along-block-axis-001.html Error output: @@ -1,5 +1,5 @@ -PASS Taking into account stretch axis. +FAIL Taking into account stretch axis. assert_approx_equals: vertical characters stretch vertically expected 150 +/- 2 but got 25 PASS Taking into account stretchy property. FAIL Only operators with a stretchy property and block stretch axis. assert_approx_equals: small width expected 12.5 +/- 2 but got 19.4375 FAIL Operators smaller and larger than non-stretchy siblings. assert_approx_equals: small width expected 12.5 +/- 2 but got 19.4375 History:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fmathml%2Fpresentation-markup%2Foperators%2Fmo-minsize-maxsize-legacy-length-values.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fmathml%2Fpresentation-markup%2Foperators%2Fmo-minsize-maxsize-001.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fmathml%2Fpresentation-markup%2Fmrow%2Fstretch-along-block-axis-001.html&flavor=wk1
Failed test link:
https://build.webkit.org/results/Apple-Ventura-Release-WK1-Tests/282323@main%20(8953)/imported/w3c/web-platform-tests/mathml/presentation-markup/mrow/stretch-along-block-axis-001-pretty-diff.html
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-30 10:53:28 PDT
<
rdar://problem/135027701
>
EWS
Comment 2
2024-08-30 12:21:52 PDT
Test gardening commit
282986@main
(cb4a631aa968): <
https://commits.webkit.org/282986@main
> Reviewed commits have been landed. Closing PR #32958 and removing active labels.
Matt Woodrow
Comment 3
2024-09-02 19:01:54 PDT
***
Bug 277989
has been marked as a duplicate of this bug. ***
Matt Woodrow
Comment 4
2024-09-02 19:11:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33049
EWS
Comment 5
2024-09-03 01:32:11 PDT
Committed
283086@main
(055b8b07f678): <
https://commits.webkit.org/283086@main
> Reviewed commits have been landed. Closing PR #33049 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug