REGRESSION (282319@main):[ wk1 and iOS] 3 tests in imported/w3c/web-platform-tests/mathml/presentation-markup are consistent failures. https://bugs.webkit.org/show_bug.cgi?id=278933 <rdar://135027701>

Reviewed by Frédéric Wang.

RenderMathMLOperator::stretchTo computes the stretched size, and stores
resulting values on itself, as well as the operator object.

If we then later get a style change, and call reset() on the operator object,
that clears all contained values and leaves the two out of sync. Future calls to
stretchTo early return since the values match, but the operator doesn't get
updated again.

Fix by also clearing the cached stretch size on the renderer at the same time.

This regressed by changing paint/layout timing subtly that meant we got the font
load style change after we'd computed a stretch size once.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/mathml/presentation-markup/operators/operator-dictionary-stretchy-001-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/mathml/presentation-markup/operators/operator-dictionary-stretchy-002-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/mathml/presentation-markup/operators/operator-dictionary-stretchy-003-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/mathml/presentation-markup/operators/operator-dictionary-stretchy-004-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/mathml/presentation-markup/operators/operator-dictionary-stretchy-005-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/mathml/presentation-markup/operators/operator-dictionary-stretchy-006-expected.txt:
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/ipad/TestExpectations:
* LayoutTests/platform/mac-wk1/TestExpectations:
* Source/WebCore/rendering/mathml/RenderMathMLOperator.cpp:
(WebCore::RenderMathMLOperator::styleDidChange):

Canonical link: https://commits.webkit.org/283086@main